--- a/Portfolio/Portfolio/src/app/public/components/testimonials/testimonials.component.html
+++ b/Portfolio/Portfolio/src/app/public/components/testimonials/testimonials.component.html
@@ -3,7 +3,7 @@
       <!-- Heading -->
       <div class="position-relative d-flex text-center mb-5">
         <h2 class="text-24 text-light opacity-4 text-uppercase fw-600 w-100 mb-0">
-          Testimonial
+          Testimonial (Work in Progress)
         </h2>
         <p class="text-9 text-dark fw-600 position-absolute w-100 align-self-center lh-base mb-0">
           Client Speak<span
@@ -12,113 +12,4 @@
       </div>
       <!-- Heading end-->
 
-      <!-- <owl-carousel-o [options]="customOptions">
-        <ng-container *ngFor="let slide of dynamicSlides">
-          <ng-template carouselSlide [id]="slide.id">
-            <img [src]="slide.src" [alt]="slide.alt" [title]="slide.title" />
-          </ng-template>
-        </ng-container>
-      </owl-carousel-o> -->
-
-      <div class="owl-carousel owl-theme" data-loop="true" data-nav="false" data-autoplay="false" data-margin="25"
-        data-stagepadding="0" data-slideby="1" data-items-xs="1" data-items-sm="1" data-items-md="1"
-        data-items-lg="2">
-        <div class="item">
-          <div class="bg-light rounded p-5">
-            <div class="d-flex align-items-center mt-auto mb-4">
-              <img class="img-fluid rounded-circle border d-inline-block w-auto"
-                src="../assets/images/testimonial/client-sm-3.jpg" alt="" />
-              <p class="ms-3 mb-0">
-                <strong class="d-block text-dark fw-600">Dennis Jacques</strong>
-                <span class="text-muted fw-500">User from USA</span>
-              </p>
-            </div>
-            <p class="text-dark fw-500 mb-4">
-              “Only trying it out since a few days. But up to now excellent.
-              Seems to work flawlessly. priced simply dummy text of the
-              printing and typesetting industry.”
-            </p>
-            <span class="text-2">
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-            </span>
-          </div>
-        </div>
-        <div class="item">
-          <div class="bg-light rounded p-5">
-            <div class="d-flex align-items-center mt-auto mb-4">
-              <img class="img-fluid rounded-circle border d-inline-block w-auto"
-                src="../assets/images/testimonial/client-sm-1.jpg" alt="" />
-              <p class="ms-3 mb-0">
-                <strong class="d-block text-dark fw-600">Jay Shah</strong>
-                <span class="text-muted fw-500">Founder at Icomatic Pvt Ltd</span>
-              </p>
-            </div>
-            <p class="text-dark fw-500 mb-4">
-              "Easy to use, reasonably priced simply dummy text of the
-              printing and typesetting industry. Quidam lisque persius
-              interesset his et, in quot quidam possim iriure.”
-            </p>
-            <span class="text-2">
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-            </span>
-          </div>
-        </div>
-        <div class="item">
-          <div class="bg-light rounded p-5">
-            <div class="d-flex align-items-center mt-auto mb-4">
-              <img class="img-fluid rounded-circle border d-inline-block w-auto"
-                src="../assets/images/testimonial/client-sm-2.jpg" alt="" />
-              <p class="ms-3 mb-0">
-                <strong class="d-block text-dark fw-600">Patrick Cary</strong>
-                <span class="text-muted fw-500">Freelancer from USA</span>
-              </p>
-            </div>
-            <p class="text-dark fw-500 mb-4">
-              “I am happy Working with printing and typesetting industry.
-              Quidam lisque persius interesset his et, in quot quidam
-              persequeris essent possim iriure.”
-            </p>
-            <span class="text-2">
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-            </span>
-          </div>
-        </div>
-        <div class="item">
-          <div class="bg-light rounded p-5">
-            <div class="d-flex align-items-center mt-auto mb-4">
-              <img class="img-fluid rounded-circle border d-inline-block w-auto"
-                src="../assets/images/testimonial/client-sm-4.jpg" alt="" />
-              <p class="ms-3 mb-0">
-                <strong class="d-block text-dark fw-600">Chris Tom</strong>
-                <span class="text-muted fw-500">User from UK</span>
-              </p>
-            </div>
-            <p class="text-dark fw-500 mb-4">
-              “I have used them twice now. Good rates, very efficient service
-              and priced simply dummy text of the printing and typesetting
-              industry quidam interesset his et. Excellent.”
-            </p>
-            <span class="text-2">
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-              <i class="fas fa-star text-warning"></i>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
